Added valid plots, .gitignore, README, and general cleanup

--- a/Report.tex
+++ b/Report.tex
@@ -19,7 +19,7 @@
     \import{./res/Sections}{Analysis.tex}
             
 
-
+    \pagebreak
     \pagebreak
     \bibliography{Sources}
     \bibliographystyle{plain}
