Reorganization; Made significant progress

--- a/Preamble.sty
+++ b/Preamble.sty
@@ -9,14 +9,15 @@
 %subfigures/tables/etc.
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{multirow}
 
-%"standard" math stuff
+%math stuff
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{siunitx}
 \usepackage{mathtools}
 \usepackage{bm}
-
+\usepackage{siunitx}
 
 %feynman diagrams!
 \usepackage[compat=1.1.0]{tikz-feynman}
