--- a/Report.tex
+++ b/Report.tex
@@ -20,6 +20,9 @@
             
 
     \pagebreak
+    \appendix
+    \import{./res/Sections}{Appendix.tex}
+
     \pagebreak
     \bibliography{Sources}
     \bibliographystyle{plain}
