Aug06: Got all the way through, time for edits and additional things

--- a/Preamble.sty
+++ b/Preamble.sty
@@ -10,6 +10,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{multirow}
+\usepackage{multicol}
+\usepackage{enumitem}
 
 %math stuff
 \usepackage{amsmath}
