--- a/Report.tex
+++ b/Report.tex
@@ -17,11 +17,14 @@
     \import{./res/Sections}{AsymmPairProd.tex}
     \import{./res/Sections}{Methodology.tex}
     \import{./res/Sections}{Analysis.tex}
-            
+    \import{./res/Sections}{Discussion.tex}
+    \import{./res/Sections}{Acknowledgements.tex}
+
 
     \pagebreak
     \appendix
     \import{./res/Sections}{Appendix.tex}
+    %\import{./res/Sections}{Test.tex} %testing, of course!
 
     \pagebreak
     \bibliography{Sources}
