--- a/Sources.bib
+++ b/Sources.bib
@@ -90,3 +90,14 @@
   year      = {2018},
   month     = may
 }
+
+
+@misc{resnet,
+  title         = {Deep Residual Learning for Image Recognition}, 
+  author        = {Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+  year          = {2015},
+  eprint        = {1512.03385},
+  archivePrefix = {arXiv},
+  primaryClass  = {cs.CV},
+  url           = {https://arxiv.org/abs/1512.03385}, 
+}
