--- a/res/Sections/Appendix.tex
+++ b/res/Sections/Appendix.tex
@@ -18,5 +18,65 @@
     \end{table}
     \renewcommand{\arraystretch}{1}
 
+
 \pagebreak
-\section{Most Important Missing Rel.22 Branches}\label{MissingBranches}
+\section{Rel.21 Branches Missing/Renamed from Rel.22}\label{MissingBranches}
+\subsection{Pre-Selection Criteria}\label{preselectMissingFeatures}
+    \begin{multicols}{2}
+    \begin{itemize}
+        \item \textit{dilep\_type}
+        \item \textit{nJets\_OR\_DL1r\_85}
+        \item \textit{custTrigMatch\_LooseID\_FCLooseIso\_SLTorDLT}
+        \item \textit{lep\_Mtrktrk\_atConvV\_CO\_X}
+        \item \textit{lep\_Mtrktrk\_atPV\_CO\_X}
+        \item \textit{passPLIVTight\_X}
+        \item \textit{lep\_isolationLoose\_VarRad\_X}
+        \item \textit{lep\_chargeIDBDTResult\_recalc\_rel207\_tight\_X}
+    \end{itemize}
+    \end{multicols}
+
+\subsection{Training Features}\label{trainMissingFeatures}
+    \begin{multicols}{2}
+    \begin{itemize}
+        \item \textit{HT\_fwdJets}
+        \item \textit{HT\_inclFwdJets}
+        \item \textit{Mb0}
+        \item \textit{Mb1}
+        \item \textit{Mlb}
+        \item \textit{MtLep1Met}
+        \item \textit{Ptll01}
+        \item \textit{bTagSF\_weight\_DL1r\_77}
+        \item \textit{bTagSF\_weight\_DL1r\_85}
+        \item \textit{best\_Z\_Mll}
+        \item \textit{best\_Z\_other\_Mll}
+        \item \textit{best\_Z\_other\_MtLepMet}
+        \item \textit{dEta\_maxMjj\_frwdjet}
+        \item \textit{eta\_frwdjet}
+        \item \textit{lep\_Mtrktrk\_atConvV\_CO\_0}
+        \item \textit{lep\_Mtrktrk\_atConvV\_CO\_1}
+        \item \textit{lep\_Mtrktrk\_atPV\_CO\_0}
+        \item \textit{lep\_Mtrktrk\_atPV\_CO\_1}
+        \item \textit{lep\_RadiusCO\_0}
+        \item \textit{lep\_RadiusCO\_1}
+        \item \textit{lep\_chargeIDBDTResult\_recalc\_rel207\_tight\_0}
+        \item \textit{lep\_nInnerPix\_0}
+        \item \textit{lep\_nInnerPix\_1}
+        \item \textit{lep\_nTrackParticles\_0}
+        \item \textit{lep\_nTrackParticles\_1}
+        \item \textit{lep\_sigd0PV\_0}
+        \item \textit{lep\_sigd0PV\_1}
+        \item \textit{minDeltaR\_LJ\_0}
+        \item \textit{minDeltaR\_LJ\_1}
+        \item \textit{minDeltaR\_LJ\_2}
+        \item \textit{minOSMll}
+        \item \textit{minOSSFMll}
+        \item \textit{mjjMax\_frwdJet}
+        \item \textit{nFwdJets\_OR}
+        \item \textit{nJets\_OR\_DL1r\_77}
+        \item \textit{nJets\_OR\_DL1r\_85}
+        \item \textit{passPLIVTight\_0}
+        \item \textit{passPLIVTight\_1}
+        \item \textit{taus\_DL1r\_0}
+        \item \textit{taus\_passJVT\_0}
+    \end{itemize}
+    \end{multicols}
