--- a/res/Sections/AsymmPairProd.tex
+++ b/res/Sections/AsymmPairProd.tex
@@ -33,7 +33,7 @@
          This will allow the LQ to couple to only right-handed, third-generation leptons, so the tau. Since we also want a decay into a top quark, we need $Y^{XR}_{33} \neq 0$, but we will let the LQ couple to all quark generations to reduce PDF suppressions. Table~\ref{crossSections} contains the cross sections for various masses and Yukawa couplings, where the Yukawa magnitude of each matrix element is identical.\footnote{In principle, it is entirely possible to specify that the $Y^{XR}_{33}$ matrix element be greater than the others in order to isolate the decay $LQ \rightarrow t\tau$; this is something we delegate to a future study.}
 
         \renewcommand{\arraystretch}{1.15}
-        \begin{table}[]
+        \begin{table}[tbh]
             \centering
             \begin{tabular}{c|c|c}
                 $m_{LQ}$ & $y$ & $\sigma$ \\ \hline
